docs/eck/no_auth/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: eck-stack
spec:
  ingressClassName: nginx
  rules:
  - host: kibana.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: noauth-kb-http
            port:
              number: 5601
---
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: es-ingress
  namespace: eck-stack
spec:
  ingressClassName: nginx
  rules:
  - host: elasticsearch.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: noauth-es-http
            port:
              number: 9200
---
